# mac-realtime-stt

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
transcriber/: __init__.py  app.py  audio.py  config.py  data_manager.py  display_gui.py  main_window.py  overlay_window.py  processor.py  processor_realtimestt.py  settings_window.py  transcription.py  translation.py
