[project]
name = "mac-transcriber"
version = "0.1.0"
description = "Mac 实时字幕 + 翻译 (BlackHole + faster-whisper + OpenAI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "openai>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
]

[project.scripts]
mac-transcriber = "run:main"

[project.gui-scripts]
mac-transcriber-gui = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transcriber"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
]
